--- a/shoe-style.css
+++ b/shoe-style.css
@@ -1,20 +1,125 @@
-nav {
-   display: flex; 
-   margin-top: 2rem;
-   flex-direction: row;
-   padding: auto;
-   border:  gray;
-   background-color: red;
-   padding-bottom: 15px;
+
+
+body{
+    margin-top: 2rem;
+    margin-left: 3rem;
+    margin-right: 2rem;
+    margin-bottom: 2rem;
+
+}
+
+nav{
+    border-bottom:  2px solid lightgray;
+}
+.polar-horizontal {
+    display: flex; 
+    
+    column-gap: 5px;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 15x;
+    flex-direction: row;
+    
+    
+}
+.location-info {
+    margin-top: 1rem;
+    font-size: medium;
+}
+
+.left-nav-section-container {
+    display: flex;
+    justify-content: space-evenly;
+    
+   
+    
+}
+
+.right-nav-section-container {
+    display: flex;
+    justify-content: space-evenly;
+    
+    
+ 
+}
+
+.nav-column{
+    display: flex;
+    padding-left: 2rem;
+    padding-bottom: 3fr;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
    
 }
 
-.navdiv {
-    background-color: green;
-    position: relative;
+
+.leftnavdiv {
+    display: flex;
+    padding-right: 2rem;
+    padding-bottom: 1rem;
+    font-weight: bold;
+    align-self: flex-end;
     
-    margin-left: 1rem;
-    justify-content: flex-start;
-   
 }
+.rightnavdiv {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.main-img{
+    border-radius: 20px;
+}
+    
+#big-shoe{
+    height: 30rem;
+    width: 30rem;
+    border: 5px solid black;
+    margin-right: 3rem;
+
+    
+}
+
+#login{
+    height: 2rem;
+    
+
+}
+.smaller-shoe-img{
+    height: 3rem;
+    width: 3rem
+}
+
+
+
+
+#main-body {
+    margin-top: 2rem;
+    margin-right: 3rem;
+    margin-left: 2rem;
+    margin-bottom: 2rem;
+    
+}
+
+#logo{
+    height: 2rem;
+    border-radius: 100%;
+    margin-right: 1rem;
+}
+
+.logo-div{
+    display: flex;
+    margin-right: 30rem;
+    align-items: center;
+
+}
+
+#code-number{
+    color: lightgray;
+}
+
+.right-main{
+    margin-bottom: 2rem;
+}
+    
 
